<resources>
    <string name="app_name">egisterpp</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="login_error_title">Registering</string>
    <string name="logo_desc">App logo</string>
    <string name="logout">Logout</string>
    <string name="profile">My Profile</string>
    <string name="action_refresh">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="app_version">1.0</string>
    <string name="title_version">Version</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">This Software has been designed and built for selling. With this software you can integrate it to your main application for adding chat function or you can make a secure chat between your friends and workmates  </string>
    <string name="copyright">All Right reserved </string>

</resources>
