<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="sync_category"
        android:title="Notification Service">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="perform_sync"
            android:summary="Enable or disable notifications"
            android:title="Enable Notification" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_about">
        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />
        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />
        <Preference
            android:title="COPYRIGHT"
            android:summary="@string/copyright" />
    </PreferenceCategory>

</PreferenceScreen>